--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<script type="text/javascript" src="./lib/x2js.js"></script>
 	<script type="text/javascript" src="./lib/jszip.min.js"></script>
 	<script type="text/javascript" src="./lib/eaysjbig2.js"></script>
-
+	<script type="text/javascript" src="./lib/opentype.min.js"></script>
 	<script type="module" src="index.js"></script>
  
 	
