修复多背景模板情况
修复多背景模板情况

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<script type="text/javascript" src="./lib/jszip.min.js"></script>
 	<script type="text/javascript" src="./lib/eaysjbig2.js"></script>
 	<script type="text/javascript" src="./lib/opentype.min.js"></script>
-	<script type="module" src="index.js"></script>
- 
+	<script type="text/javascript" src="./EasyOFD.js"></script>
+	<script type="text/javascript" src="./index.js"></script>
 	
 </html>
